# bandwidth-estimator

./: CMakeLists.txt  README.md  bw_estimation_generator.c  bw_estimation_packets.h  bw_estimation_recv.c  bw_estimation_recv.h  bw_estimation_sender.c  generate_traffic_control_sender.c  generate_traffic_receiver.c  gt_ctl.h  parse_recv_times.py  plot_recv_times.py
initial_app/: generate_traffic_control_common.c  generate_traffic_control_common.h  generate_traffic_control_recv.c  generate_traffic_sender.c
